--- a/package.json
+++ b/package.json
@@ -5,5 +5,19 @@
   "main": "index.js",
   "repository": "https://github.com/drmksong/movieql",
   "author": "mk song",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "global": "^4.4.0",
+    "graphql-yoga": "^1.18.3"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-node": "^0.0.1-security",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "node-fetch": "^2.6.0"
+  }
 }
