--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "graphql-yoga": "^1.18.3"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "nodemon --exec babel-node index.js",
+    "build": "babel graphql -d dist"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
